[tool.poetry]
name = "conditional-github-actions"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[virtualenvs]
create = true
in-project = true

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]